Fixed Bay Bash on mobile. Updated Form

--- a/styles/hospital.less
+++ b/styles/hospital.less
@@ -20,7 +20,7 @@
   border: 2px white solid;
   border-radius: 0;
   outline: none;
-  height: 60px;
+  height: 62px;
 }
 
 .input-sign-up:focus {
