--- a/styles/mobile.less
+++ b/styles/mobile.less
@@ -1,6 +1,9 @@
 @mobileHeader: 300px;
 
 @media(max-width:768px) {
+  .cancel-mobile-padding {
+    padding:0;
+  }
   .navbar-default {
     text-align: center;
   }
@@ -40,7 +43,7 @@
 
   .bay-bash {
     min-height:55vh;
-    height:400px;
+    height:500px;
   }
 
  .bay-bash .icon-BB {
